Update movie
